--- a/map.html
+++ b/map.html
@@ -1,52 +1,65 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Map • Tennessee Gameday Hub</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <script defer src="assets/js/app.js"></script>
+  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-2">
 </head>
-<body class="page map-page">
-  <header class="site-header">
-    <div class="bar container">
-      <a class="brand" href="index.html"><span class="logo">TN</span><span>Tennessee</span></a>
-      <div id="countdown">
-        <div class="cd-badge"><span id="cd-days">00</span><span class="cd-label">days</span></div>
-        <div class="cd-badge"><span id="cd-hrs">00</span><span class="cd-label">hrs</span></div>
-        <div class="cd-badge"><span id="cd-min">00</span><span class="cd-label">mins</span></div>
-        <div class="cd-badge"><span id="cd-sec">00</span><span class="cd-label">secs</span></div>
-      </div>
-      <nav class="site-nav">
-        <a href="schedule.html">Schedule</a><a href="specials.html">Specials</a><a href="map.html">Map</a><a href="guide.html">Guide</a>
-        <a class="btn" href="submit.html">Submit</a>
-      </nav>
-    </div>
-  </header>
+<body>
+<header class="site-header">
+  <a class="brand" href="index.html"><span class="brand-badge">TN</span><span class="brand-name">Tennessee</span></a>
+  <nav class="main-nav">
+    <a href="schedule.html">Schedule</a>
+    <a href="specials.html">Specials</a>
+    <a class="is-active" href="map.html">Map</a>
+    <a href="guide.html">Guide</a>
+  </nav>
+  <div class="countdown" id="countdown">
+    <span><b id="cd-days">00</b><em>days</em></span>
+    <span><b id="cd-hrs">00</b><em>hrs</em></span>
+    <span><b id="cd-min">00</b><em>mins</em></span>
+    <span><b id="cd-sec">00</b><em>secs</em></span>
+  </div>
+  <a class="btn btn-primary" href="submit.html">Submit</a>
+</header>
 
-  <main class="container rail-layout">
-    <div class="content stack">
-      <section class="card">
-        <h2>Interactive map</h2>
-        <iframe class="embed map" src="https://www.openstreetmap.org/export/embed.html?bbox=-84.05%2C35.86%2C-83.80%2C36.02&layer=mapnik&marker=35.955%2C-83.925"></iframe>
-        <p><a class="meta" href="https://www.openstreetmap.org/?mlat=35.955&mlon=-83.925#map=13/35.955/-83.925" target="_blank" rel="noopener">Open full map</a></p>
-      </section>
+<main class="wrap grid grid--2col">
+  <section class="card">
+    <header class="card-h"><h1>Interactive map</h1></header>
+    <div class="card-b">
+      <iframe title="Knoxville map"
+        style="border:0;width:100%;height:260px;border-radius:10px;"
+        src="https://www.openstreetmap.org/export/embed.html?bbox=-83.995%2C35.90%2C-83.85%2C36.00&layer=mapnik&marker=35.955%2C-83.925"
+        loading="lazy"></iframe>
+      <p><a class="muted" href="https://www.openstreetmap.org/#map=13/35.955/-83.925" target="_blank" rel="noopener">Open full map</a></p>
     </div>
-    <aside class="rail stack">
-      <section class="card">
-        <h3>Quick links</h3>
-        <ul class="meta" style="margin:0; padding-left:1rem">
-          <li><a href="guide.html">Guide</a></li>
-          <li><a href="specials.html">Specials</a></li>
-          <li><a href="schedule.html">Schedule</a></li>
-        </ul>
-      </section>
-      <section class="card">
-        <h3>Live traffic (Waze)</h3>
-        <iframe class="embed map" src="https://embed.waze.com/iframe?lat=35.9545&lon=-83.9250&zoom=14&pin=1"></iframe>
-      </section>
-    </aside>
-  </main>
+  </section>
 
-  <footer class="site-footer"><div class="container"><p class="meta">Unofficial fan resource.</p></div></footer>
+  <aside class="card">
+    <header class="card-h"><h3>Quick links</h3></header>
+    <ul class="card-b list-links">
+      <li><a href="guide.html">Guide</a></li>
+      <li><a href="specials.html">Specials</a></li>
+      <li><a href="schedule.html">Schedule</a></li>
+      <li><a href="submit.html">Submit a listing</a></li>
+    </ul>
+  </aside>
+
+  <section class="card span-2">
+    <header class="card-h"><h2>Live traffic (Waze)</h2></header>
+    <div class="card-b">
+      <iframe title="Waze live"
+        style="border:0;width:100%;height:260px;border-radius:10px;"
+        src="https://embed.waze.com/iframe?zoom=14&lat=35.9549&lon=-83.9263&pin=1"
+        loading="lazy"></iframe>
+    </div>
+  </section>
+</main>
+
+<footer class="site-foot">
+  <p class="muted">Unofficial fan resource.</p>
+</footer>
+<script src="/sports-fansite/assets/js/app.js?v=2025-08-30-2"></script>
 </body>
 </html>
