--- a/index.html
+++ b/index.html
@@ -3,147 +3,125 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Tennessee • Gameday Hub</title>
-  <link rel="preconnect" href="https://api.open-meteo.com" crossorigin>
-  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-2">
+  <title>TN Tennessee — Gameday Hub</title>
+
+  <link rel="preload" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3" as="style">
+  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3">
+  <script defer src="/sports-fansite/assets/js/app.js?v=2025-08-30-3"></script>
 </head>
 <body>
-<header class="site-header">
-  <a class="brand" href="index.html" aria-label="Home">
-    <span class="brand-badge">TN</span> <span class="brand-name">Tennessee</span>
-  </a>
-
-  <nav class="main-nav">
-    <a href="schedule.html">Schedule</a>
-    <a href="specials.html">Specials</a>
-    <a href="map.html">Map</a>
-    <a href="guide.html">Guide</a>
-  </nav>
-
-  <div class="countdown" id="countdown">
-    <span><b id="cd-days">00</b><em>days</em></span>
-    <span><b id="cd-hrs">00</b><em>hrs</em></span>
-    <span><b id="cd-min">00</b><em>mins</em></span>
-    <span><b id="cd-sec">00</b><em>secs</em></span>
+<header class="siteHeader">
+  <div class="wrap">
+    <a class="brand" href="/sports-fansite/">
+      <span class="logo">TN</span><span class="brandText">Tennessee</span>
+    </a>
+    <nav class="primaryNav">
+      <a href="/sports-fansite/schedule.html">Schedule</a>
+      <a href="/sports-fansite/specials.html">Specials</a>
+      <a href="/sports-fansite/map.html">Map</a>
+      <a href="/sports-fansite/guide.html">Guide</a>
+    </nav>
+    <div id="countdown" class="countdown">
+      <span class="pill" id="cd-days">00</span>
+      <span class="pill" id="cd-hrs">00</span>
+      <span class="pill" id="cd-min">00</span>
+      <span class="pill" id="cd-sec">00</span>
+    </div>
+    <a class="btnPrimary" href="/sports-fansite/submit.html">Submit</a>
   </div>
-
-  <a class="btn btn-primary" href="submit.html">Submit</a>
 </header>
 
-<main class="wrap grid grid--home">
-  <section class="card" id="score">
-    <header class="card-h"><h2>Live Score Box</h2></header>
-    <div class="card-b" id="scoreBody">Loading…</div>
-  </section>
+<main class="wrapMain pageGrid">
+  <!-- content column -->
+  <section class="homeGrid">
+    <article class="card span-4">
+      <h2>Live Score Box</h2>
+      <div id="scoreBody" class="stack">Loading…</div>
+    </article>
 
-  <section class="card" id="next">
-    <header class="card-h"><h2>Upcoming Game</h2></header>
-    <div class="card-b">
-      <div id="nextLine">Loading…</div>
-      <a id="addToCal" class="btn btn-small" href="#">Add to Google Calendar</a>
-    </div>
-  </section>
+    <article class="card span-4">
+      <h2>Upcoming Game</h2>
+      <p>Loading…</p>
+      <a id="addToCal" class="linkBtn" href="#">Add to Google Calendar</a>
+    </article>
 
-  <section class="card" id="wx">
-    <header class="card-h"><h2>Weather (3-day)</h2></header>
-    <div class="card-b">
-      <ul id="wxList" class="list-plain"></ul>
-      <small id="wxMeta" class="muted"></small>
-    </div>
-  </section>
-
-  <section class="card span-2" id="schedWrap">
-    <header class="card-h">
-      <h2>Schedule & Results</h2>
-      <small id="dataStamp" class="muted"></small>
-    </header>
-    <div class="card-b">
-      <div class="table scroller">
-        <table class="table">
-          <thead>
-          <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
-          </thead>
-          <tbody id="sched" data-limit="3"></tbody>
-        </table>
-      </div>
-      <a class="btn btn-small" href="schedule.html">Show full schedule</a>
-    </div>
-  </section>
-
-  <aside class="rail">
-    <section class="card">
-      <header class="card-h"><h3>Live Traffic (Neyland)</h3></header>
-      <div class="card-b">
-        <iframe
-          title="Waze live map"
-          style="border:0;width:100%;height:180px;border-radius:10px;"
-          src="https://embed.waze.com/iframe?zoom=14&lat=35.9549&lon=-83.9263&pin=1"
-          loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <small class="muted">Data: Waze Live Map</small>
-      </div>
-    </section>
-
-    <section class="card">
-      <header class="card-h"><h3>Mini Map</h3></header>
-      <div class="card-b">
-        <iframe title="Mini map"
-          style="border:0;width:100%;height:180px;border-radius:10px;"
-          src="https://www.openstreetmap.org/export/embed.html?bbox=-83.995%2C35.90%2C-83.85%2C36.00&layer=mapnik&marker=35.955%2C-83.925"
-          loading="lazy"></iframe>
-        <a class="muted" target="_blank" rel="noopener" href="https://www.openstreetmap.org/#map=13/35.955/-83.925">Open full map</a>
-      </div>
-    </section>
-
-    <section class="card">
-      <header class="card-h"><h3>Quick Links</h3></header>
-      <ul class="card-b list-links">
-        <li><a href="guide.html">Guide</a></li>
-        <li><a href="specials.html">Specials</a></li>
-        <li><a href="map.html">Map</a></li>
-        <li><a href="submit.html">Submit a listing</a></li>
+    <article class="card span-4" id="weather">
+      <h2>Weather (3-day)</h2>
+      <ul id="weatherList">
+        <li>—</li><li>—</li><li>—</li>
       </ul>
-    </section>
+      <p class="muted" id="weatherNote">Forecasts update nearer to kickoff.</p>
+    </article>
+
+    <article class="card span-12">
+      <h2>Schedule & Results</h2>
+      <div class="muted" id="dataStamp">Loading…</div>
+      <table class="table">
+        <thead><tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr></thead>
+        <tbody id="sched"><tr><td colspan="5">Loading…</td></tr></tbody>
+      </table>
+      <div style="margin-top:12px">
+        <a class="linkBtn" href="/sports-fansite/schedule.html">Show full schedule</a>
+      </div>
+    </article>
+
+    <article class="card span-12">
+      <h2>Featured Specials</h2>
+      <p>See the <a href="/sports-fansite/specials.html">specials</a> page for new listings.</p>
+    </article>
+
+    <article class="card span-12">
+      <h2>TV & Streams (This Week)</h2>
+      <p>Updates closer to kickoff.</p>
+    </article>
+
+    <article class="card span-12">
+      <h2>Odds</h2>
+      <p class="muted">For entertainment only. Check a licensed sportsbook for current numbers.</p>
+    </article>
+
+    <article class="card span-12">
+      <h2>Rankings (AP Top 25)</h2>
+      <p>AP poll updates weekly.</p>
+    </article>
+
+    <article class="card span-12">
+      <h2>Quick Links</h2>
+      <p><a href="/sports-fansite/guide.html">Guide</a> · <a href="/sports-fansite/specials.html">Specials</a> · <a href="/sports-fansite/map.html">Map</a> · <a href="/sports-fansite/schedule.html">Schedule</a> · <a href="/sports-fansite/submit.html">Submit</a></p>
+    </article>
+  </section>
+
+  <!-- rail -->
+  <aside class="rail">
+    <article class="card">
+      <h2>Live Traffic (Neyland)</h2>
+      <iframe title="Waze" src="https://embed.waze.com/iframe?zoom=14&lat=35.955&lon=-83.925&pin=1" width="100%" height="230" style="border:0; border-radius:10px;"></iframe>
+      <p class="muted">Data: Waze Live Map</p>
+    </article>
+
+    <article class="card">
+      <h2>Mini Map</h2>
+      <iframe title="Map" src="https://www.openstreetmap.org/export/embed.html?bbox=-83.98,35.92,-83.87,35.99&layer=mapnik" width="100%" height="210" style="border:0; border-radius:10px;"></iframe>
+      <p><a class="muted" target="_blank" href="https://www.openstreetmap.org/#map=13/35.955/-83.925">Open full map</a></p>
+    </article>
+
+    <article class="card">
+      <h2>Quick links</h2>
+      <ul>
+        <li><a href="/sports-fansite/guide.html">Guide</a></li>
+        <li><a href="/sports-fansite/specials.html">Specials</a></li>
+        <li><a href="/sports-fansite/map.html">Map</a></li>
+        <li><a href="/sports-fansite/schedule.html">Schedule</a></li>
+        <li><a href="/sports-fansite/submit.html">Submit a listing</a></li>
+      </ul>
+    </article>
   </aside>
-
-  <section class="card">
-    <header class="card-h"><h2>Featured Specials</h2></header>
-    <div class="card-b"><p>See the <a href="specials.html">specials</a> page for new listings.</p></div>
-  </section>
-
-  <section class="card">
-    <header class="card-h"><h2>TV & Streams (This Week)</h2></header>
-    <div class="card-b"><p>Updates closer to kickoff.</p></div>
-  </section>
-
-  <section class="card">
-    <header class="card-h"><h2>Odds</h2></header>
-    <div class="card-b"><p class="muted">For entertainment only. Check a licensed sportsbook for current numbers.</p></div>
-  </section>
-
-  <section class="card">
-    <header class="card-h"><h2>Rankings (AP Top 25)</h2></header>
-    <div class="card-b"><p>AP poll updates weekly.</p></div>
-  </section>
-
-  <section class="card">
-    <header class="card-h"><h2>Quick Links</h2></header>
-    <ul class="card-b list-inline">
-      <li><a href="guide.html">Guide</a></li>
-      <li><a href="specials.html">Specials</a></li>
-      <li><a href="map.html">Map</a></li>
-      <li><a href="schedule.html">Schedule</a></li>
-      <li><a href="submit.html">Submit</a></li>
-    </ul>
-  </section>
 </main>
 
-<footer class="site-foot">
-  <p class="muted">Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
-  <nav class="foot-nav">
-    <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
-  </nav>
+<footer class="footer">
+  <div class="inner">
+    Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.
+  </div>
 </footer>
-
-<script src="/sports-fansite/assets/js/app.js?v=2025-08-30-2"></script>
 </body>
 </html>
