--- a/specials.html
+++ b/specials.html
@@ -3,56 +3,53 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Specials • Tennessee Gameday Hub</title>
-  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-2">
+  <title>Featured Specials — Tennessee</title>
+  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3">
+  <script defer src="/sports-fansite/assets/js/app.js?v=2025-08-30-3"></script>
 </head>
 <body>
-<header class="site-header">
-  <a class="brand" href="index.html"><span class="brand-badge">TN</span><span class="brand-name">Tennessee</span></a>
-  <nav class="main-nav">
-    <a href="schedule.html">Schedule</a>
-    <a class="is-active" href="specials.html">Specials</a>
-    <a href="map.html">Map</a>
-    <a href="guide.html">Guide</a>
-  </nav>
-  <div class="countdown" id="countdown">
-    <span><b id="cd-days">00</b><em>days</em></span>
-    <span><b id="cd-hrs">00</b><em>hrs</em></span>
-    <span><b id="cd-min">00</b><em>mins</em></span>
-    <span><b id="cd-sec">00</b><em>secs</em></span>
+<header class="siteHeader">
+  <div class="wrap">
+    <a class="brand" href="/sports-fansite/"><span class="logo">TN</span><span class="brandText">Tennessee</span></a>
+    <nav class="primaryNav">
+      <a href="/sports-fansite/schedule.html">Schedule</a>
+      <a href="/sports-fansite/specials.html">Specials</a>
+      <a href="/sports-fansite/map.html">Map</a>
+      <a href="/sports-fansite/guide.html">Guide</a>
+    </nav>
+    <div id="countdown" class="countdown">
+      <span class="pill" id="cd-days">00</span>
+      <span class="pill" id="cd-hrs">00</span>
+      <span class="pill" id="cd-min">00</span>
+      <span class="pill" id="cd-sec">00</span>
+    </div>
+    <a class="btnPrimary" href="/sports-fansite/submit.html">Submit</a>
   </div>
-  <a class="btn btn-primary" href="submit.html">Submit</a>
 </header>
 
-<main class="wrap grid grid--2col">
-  <section class="card span-2">
-    <header class="card-h"><h1>Featured specials</h1></header>
-    <div class="card-b">
-      <div class="well">
-        <h3>Add your special</h3>
-        <p>Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
-        <a class="btn btn-primary" href="submit.html">Submit a listing</a>
-      </div>
+<main class="wrapMain pageGrid">
+  <section class="stack">
+    <article class="card">
+      <h2>Add your special</h2>
+      <p>Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
+      <a class="linkBtn" href="/sports-fansite/submit.html">Submit a listing</a>
       <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
-    </div>
+    </article>
   </section>
 
-  <aside class="card">
-    <header class="card-h"><h3>Quick links</h3></header>
-    <ul class="card-b list-links">
-      <li><a href="guide.html">Guide</a></li>
-      <li><a href="map.html">Map</a></li>
-      <li><a href="schedule.html">Schedule</a></li>
-      <li><a href="submit.html">Submit a listing</a></li>
-    </ul>
+  <aside class="rail">
+    <article class="card">
+      <h2>Quick links</h2>
+      <ul>
+        <li><a href="/sports-fansite/guide.html">Guide</a></li>
+        <li><a href="/sports-fansite/map.html">Map</a></li>
+        <li><a href="/sports-fansite/schedule.html">Schedule</a></li>
+        <li><a href="/sports-fansite/submit.html">Submit a listing</a></li>
+      </ul>
+    </article>
   </aside>
 </main>
 
-<footer class="site-foot">
-  <nav class="foot-nav">
-    <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
-  </nav>
-</footer>
-<script src="/sports-fansite/assets/js/app.js?v=2025-08-30-2"></script>
+<footer class="footer"><div class="inner">Unofficial fan resource.</div></footer>
 </body>
 </html>
