--- a/submit.html
+++ b/submit.html
@@ -1,47 +1,53 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Submit • Tennessee Gameday Hub</title>
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Submit a Listing — Tennessee</title>
+  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3">
+  <script defer src="/sports-fansite/assets/js/app.js?v=2025-08-30-3"></script>
 </head>
-<body class="page submit-page">
-  <header class="site-header">
-    <div class="bar container">
-      <a class="brand" href="index.html"><span class="logo">TN</span><span>Tennessee</span></a>
-      <div id="countdown">
-        <div class="cd-badge"><span id="cd-days">00</span><span class="cd-label">days</span></div>
-        <div class="cd-badge"><span id="cd-hrs">00</span><span class="cd-label">hrs</span></div>
-        <div class="cd-badge"><span id="cd-min">00</span><span class="cd-label">mins</span></div>
-        <div class="cd-badge"><span id="cd-sec">00</span><span class="cd-label">secs</span></div>
-      </div>
-      <nav class="site-nav">
-        <a href="schedule.html">Schedule</a><a href="specials.html">Specials</a><a href="map.html">Map</a><a href="guide.html">Guide</a>
-        <a class="btn" href="submit.html">Submit</a>
-      </nav>
+<body>
+<header class="siteHeader">
+  <div class="wrap">
+    <a class="brand" href="/sports-fansite/"><span class="logo">TN</span><span class="brandText">Tennessee</span></a>
+    <nav class="primaryNav">
+      <a href="/sports-fansite/schedule.html">Schedule</a>
+      <a href="/sports-fansite/specials.html">Specials</a>
+      <a href="/sports-fansite/map.html">Map</a>
+      <a href="/sports-fansite/guide.html">Guide</a>
+    </nav>
+    <div id="countdown" class="countdown">
+      <span class="pill" id="cd-days">00</span><span class="pill" id="cd-hrs">00</span><span class="pill" id="cd-min">00</span><span class="pill" id="cd-sec">00</span>
     </div>
-  </header>
+    <a class="btnPrimary" href="/sports-fansite/submit.html">Submit</a>
+  </div>
+</header>
 
-  <main class="container rail-layout">
-    <div class="content stack">
-      <section class="card">
-        <h2>Submit a listing</h2>
-        <p class="meta">Send your restaurant/bar/shop gameday special or event link.</p>
-        <form action="https://forms.gle" method="get" class="stack">
-          <input aria-label="Your link" name="q" class="card" style="padding:12px" placeholder="Paste your link…" />
-          <button class="btn">Submit</button>
-        </form>
-      </section>
-    </div>
-    <aside class="rail stack">
-      <section class="card"><h3>Quick links</h3>
-        <ul class="meta" style="margin:0; padding-left:1rem">
-          <li><a href="guide.html">Guide</a></li><li><a href="map.html">Map</a></li><li><a href="schedule.html">Schedule</a></li>
-        </ul>
-      </section>
-    </aside>
-  </main>
+<main class="wrapMain pageGrid">
+  <section class="stack">
+    <article class="card">
+      <h2>Submit a listing</h2>
+      <p>Send us a restaurant/bar/shop/event that’s running a gameday special. Describe the offer, date/time, and a link for more info.</p>
+      <p><b>How to submit:</b> email <a href="mailto:vols-fansite@example.com">vols-fansite@example.com</a> or open a GitHub issue with details.</p>
+      <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
+    </article>
+  </section>
 
-  <footer class="site-footer"><div class="container"><p class="meta">Unofficial fan resource.</p></div></footer>
+  <aside class="rail">
+    <article class="card">
+      <h2>Quick links</h2>
+      <ul>
+        <li><a href="/sports-fansite/guide.html">Guide</a></li>
+        <li><a href="/sports-fansite/map.html">Map</a></li>
+        <li><a href="/sports-fansite/schedule.html">Schedule</a></li>
+        <li><a href="/sports-fansite/specials.html">Specials</a></li>
+      </ul>
+    </article>
+  </aside>
+</main>
+
+<footer class="footer"><div class="inner">Unofficial fan resource.</div></footer>
 </body>
 </html>
+
