--- a/index.html
+++ b/index.html
@@ -2,126 +2,158 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>TN Tennessee — Gameday Hub</title>
-
-  <link rel="preload" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3" as="style">
-  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3">
-  <script defer src="/sports-fansite/assets/js/app.js?v=2025-08-30-3"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tennessee • Gameday Hub</title>
+  <link rel="preload" href="assets/css/styles.css?v=2025-08-30-10" as="style">
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30-10">
 </head>
 <body>
-<header class="siteHeader">
-  <div class="wrap">
-    <a class="brand" href="/sports-fansite/">
-      <span class="logo">TN</span><span class="brandText">Tennessee</span>
+
+<header class="site-header">
+  <div class="header-inner">
+    <a class="brand" href="index.html" aria-label="Home">
+      <span class="badge">TN</span> <span>Tennessee</span>
     </a>
-    <nav class="primaryNav">
-      <a href="/sports-fansite/schedule.html">Schedule</a>
-      <a href="/sports-fansite/specials.html">Specials</a>
-      <a href="/sports-fansite/map.html">Map</a>
-      <a href="/sports-fansite/guide.html">Guide</a>
+
+    <nav class="nav">
+      <a href="schedule.html">Schedule</a>
+      <a href="specials.html">Specials</a>
+      <a href="map.html">Map</a>
+      <a href="guide.html">Guide</a>
     </nav>
-    <div id="countdown" class="countdown">
+
+    <div id="countdown" aria-label="Next kickoff countdown">
       <span class="pill" id="cd-days">00</span>
       <span class="pill" id="cd-hrs">00</span>
       <span class="pill" id="cd-min">00</span>
       <span class="pill" id="cd-sec">00</span>
     </div>
-    <a class="btnPrimary" href="/sports-fansite/submit.html">Submit</a>
   </div>
 </header>
 
-<main class="wrapMain pageGrid">
-  <!-- content column -->
-  <section class="homeGrid">
-    <article class="card span-4">
-      <h2>Live Score Box</h2>
-      <div id="scoreBody" class="stack">Loading…</div>
-    </article>
+<main class="wrap layout">
+  <section class="main">
 
-    <article class="card span-4">
-      <h2>Upcoming Game</h2>
-      <p>Loading…</p>
-      <a id="addToCal" class="linkBtn" href="#">Add to Google Calendar</a>
-    </article>
-
-    <article class="card span-4" id="weather">
-      <h2>Weather (3-day)</h2>
-      <ul id="weatherList">
-        <li>—</li><li>—</li><li>—</li>
-      </ul>
-      <p class="muted" id="weatherNote">Forecasts update nearer to kickoff.</p>
-    </article>
-
-    <article class="card span-12">
-      <h2>Schedule & Results</h2>
-      <div class="muted" id="dataStamp">Loading…</div>
-      <table class="table">
-        <thead><tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr></thead>
-        <tbody id="sched"><tr><td colspan="5">Loading…</td></tr></tbody>
-      </table>
-      <div style="margin-top:12px">
-        <a class="linkBtn" href="/sports-fansite/schedule.html">Show full schedule</a>
+    <article class="card">
+      <div class="head">Live Score Box</div>
+      <div class="body" id="scoreBody">
+        <div id="scoreBox" class="kicker">Loading…</div>
       </div>
     </article>
 
-    <article class="card span-12">
-      <h2>Featured Specials</h2>
-      <p>See the <a href="/sports-fansite/specials.html">specials</a> page for new listings.</p>
+    <article class="card">
+      <div class="head flex">
+        <span>Upcoming Game</span>
+        <a id="addToCal" class="btn" href="#" target="_blank" rel="noopener">Add to Google Calendar</a>
+      </div>
+      <div class="body kicker">Loading…</div>
     </article>
 
-    <article class="card span-12">
-      <h2>TV & Streams (This Week)</h2>
-      <p>Updates closer to kickoff.</p>
+    <article class="card">
+      <div class="head">Weather (3-day)</div>
+      <div class="body">
+        <ul id="weather3" class="kicker"></ul>
+        <div id="wxNote" class="kicker" style="margin-top:8px;"></div>
+      </div>
     </article>
 
-    <article class="card span-12">
-      <h2>Odds</h2>
-      <p class="muted">For entertainment only. Check a licensed sportsbook for current numbers.</p>
+    <article class="card">
+      <div class="head flex">
+        <span>Schedule & Results</span>
+        <span class="kicker" id="dataStamp"></span>
+      </div>
+      <div class="body">
+        <table class="table-compact">
+          <thead>
+            <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
+          </thead>
+          <tbody id="sched"></tbody>
+        </table>
+      </div>
+      <div class="foot">
+        <a class="btn" href="schedule.html">Show full schedule</a>
+        <span class="kicker" style="margin-left:10px;">Times/TV subject to change. Check official sources day-of.</span>
+      </div>
     </article>
 
-    <article class="card span-12">
-      <h2>Rankings (AP Top 25)</h2>
-      <p>AP poll updates weekly.</p>
+    <article class="card">
+      <div class="head">Featured Specials</div>
+      <div class="body kicker">See the <a href="specials.html">specials</a> page for new listings.</div>
     </article>
 
-    <article class="card span-12">
-      <h2>Quick Links</h2>
-      <p><a href="/sports-fansite/guide.html">Guide</a> · <a href="/sports-fansite/specials.html">Specials</a> · <a href="/sports-fansite/map.html">Map</a> · <a href="/sports-fansite/schedule.html">Schedule</a> · <a href="/sports-fansite/submit.html">Submit</a></p>
+    <article class="card">
+      <div class="head">TV & Streams (This Week)</div>
+      <div class="body kicker">Updates closer to kickoff.</div>
     </article>
+
+    <article class="card">
+      <div class="head">Odds</div>
+      <div class="body kicker">For entertainment only. Check a licensed sportsbook for current numbers.</div>
+    </article>
+
+    <article class="card">
+      <div class="head">Rankings (AP Top 25)</div>
+      <div class="body kicker">AP poll updates weekly.</div>
+    </article>
+
+    <article class="card">
+      <div class="head">Quick Links</div>
+      <div class="body kicker">
+        <a href="guide.html">Guide</a> ·
+        <a href="specials.html">Specials</a> ·
+        <a href="map.html">Map</a> ·
+        <a href="schedule.html">Schedule</a> ·
+        <a href="submit.html">Submit</a>
+      </div>
+    </article>
+
   </section>
 
-  <!-- rail -->
   <aside class="rail">
     <article class="card">
-      <h2>Live Traffic (Neyland)</h2>
-      <iframe title="Waze" src="https://embed.waze.com/iframe?zoom=14&lat=35.955&lon=-83.925&pin=1" width="100%" height="230" style="border:0; border-radius:10px;"></iframe>
-      <p class="muted">Data: Waze Live Map</p>
+      <div class="head">Live Traffic (Neyland)</div>
+      <div class="body">
+        <iframe class="waze-embed"
+          src="https://embed.waze.com/iframe?zoom=14&lat=35.955&lon=-83.925&pin=1"
+          allowfullscreen></iframe>
+        <div class="kicker">Data: Waze Live Map</div>
+      </div>
     </article>
 
     <article class="card">
-      <h2>Mini Map</h2>
-      <iframe title="Map" src="https://www.openstreetmap.org/export/embed.html?bbox=-83.98,35.92,-83.87,35.99&layer=mapnik" width="100%" height="210" style="border:0; border-radius:10px;"></iframe>
-      <p><a class="muted" target="_blank" href="https://www.openstreetmap.org/#map=13/35.955/-83.925">Open full map</a></p>
+      <div class="head">Mini Map</div>
+      <div class="body">
+        <iframe class="map-embed"
+          src="https://www.openstreetmap.org/export/embed.html?bbox=-83.945%2C35.945%2C-83.905%2C35.965&layer=mapnik&marker=35.955%2C-83.925"></iframe>
+        <div class="kicker"><a target="_blank" rel="noopener" href="https://www.openstreetmap.org/?mlat=35.955&mlon=-83.925#map=14/35.955/-83.925">Open full map</a></div>
+      </div>
     </article>
 
     <article class="card">
-      <h2>Quick links</h2>
-      <ul>
-        <li><a href="/sports-fansite/guide.html">Guide</a></li>
-        <li><a href="/sports-fansite/specials.html">Specials</a></li>
-        <li><a href="/sports-fansite/map.html">Map</a></li>
-        <li><a href="/sports-fansite/schedule.html">Schedule</a></li>
-        <li><a href="/sports-fansite/submit.html">Submit a listing</a></li>
-      </ul>
+      <div class="head">Quick Links</div>
+      <div class="body kicker">
+        <ul style="margin:0; padding-left:18px;">
+          <li><a href="guide.html">Guide</a></li>
+          <li><a href="specials.html">Specials</a></li>
+          <li><a href="map.html">Map</a></li>
+          <li><a href="submit.html">Submit a listing</a></li>
+        </ul>
+      </div>
+    </article>
+
+    <article class="card">
+      <div class="head">Weather now</div>
+      <div class="body kicker" id="weatherNow">—</div>
     </article>
   </aside>
 </main>
 
-<footer class="footer">
-  <div class="inner">
+<footer class="site-footer">
+  <div class="wrap muted">
     Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.
   </div>
 </footer>
+
+<script src="assets/js/app.js?v=2025-08-30-10"></script>
 </body>
 </html>
