--- a/specials.html
+++ b/specials.html
@@ -1,55 +1,52 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Featured Specials — Tennessee</title>
-  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3">
-  <script defer src="/sports-fansite/assets/js/app.js?v=2025-08-30-3"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Featured Specials • Tennessee Gameday Hub</title>
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30-10">
 </head>
 <body>
-<header class="siteHeader">
-  <div class="wrap">
-    <a class="brand" href="/sports-fansite/"><span class="logo">TN</span><span class="brandText">Tennessee</span></a>
-    <nav class="primaryNav">
-      <a href="/sports-fansite/schedule.html">Schedule</a>
-      <a href="/sports-fansite/specials.html">Specials</a>
-      <a href="/sports-fansite/map.html">Map</a>
-      <a href="/sports-fansite/guide.html">Guide</a>
+<header class="site-header">
+  <div class="header-inner">
+    <a class="brand" href="index.html"><span class="badge">TN</span> <span>Tennessee</span></a>
+    <nav class="nav">
+      <a href="schedule.html">Schedule</a>
+      <a href="specials.html">Specials</a>
+      <a href="map.html">Map</a>
+      <a href="guide.html">Guide</a>
     </nav>
-    <div id="countdown" class="countdown">
-      <span class="pill" id="cd-days">00</span>
-      <span class="pill" id="cd-hrs">00</span>
-      <span class="pill" id="cd-min">00</span>
-      <span class="pill" id="cd-sec">00</span>
-    </div>
-    <a class="btnPrimary" href="/sports-fansite/submit.html">Submit</a>
+    <div id="countdown"><span class="pill" id="cd-days">00</span><span class="pill" id="cd-hrs">00</span><span class="pill" id="cd-min">00</span><span class="pill" id="cd-sec">00</span></div>
   </div>
 </header>
 
-<main class="wrapMain pageGrid">
-  <section class="stack">
+<main class="wrap layout">
+  <section class="main">
     <article class="card">
-      <h2>Add your special</h2>
-      <p>Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
-      <a class="linkBtn" href="/sports-fansite/submit.html">Submit a listing</a>
-      <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
+      <div class="head">Featured specials</div>
+      <div class="body">
+        <p>Restaurant, bar, shop, or event with a gameday special? Share it with fans.</p>
+        <p><a class="btn" href="submit.html">Submit a listing</a></p>
+        <p class="kicker">Listings are community-submitted. Call ahead to confirm.</p>
+      </div>
     </article>
   </section>
-
   <aside class="rail">
     <article class="card">
-      <h2>Quick links</h2>
-      <ul>
-        <li><a href="/sports-fansite/guide.html">Guide</a></li>
-        <li><a href="/sports-fansite/map.html">Map</a></li>
-        <li><a href="/sports-fansite/schedule.html">Schedule</a></li>
-        <li><a href="/sports-fansite/submit.html">Submit a listing</a></li>
-      </ul>
+      <div class="head">Quick links</div>
+      <div class="body kicker">
+        <ul style="margin:0; padding-left:18px;">
+          <li><a href="guide.html">Guide</a></li>
+          <li><a href="map.html">Map</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="submit.html">Submit a listing</a></li>
+        </ul>
+      </div>
     </article>
   </aside>
 </main>
 
-<footer class="footer"><div class="inner">Unofficial fan resource.</div></footer>
+<footer class="site-footer"><div class="wrap muted">Unofficial fan resource.</div></footer>
+<script src="assets/js/app.js?v=2025-08-30-10"></script>
 </body>
 </html>
