--- a/submit.html
+++ b/submit.html
@@ -1,53 +1,37 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Submit a Listing — Tennessee</title>
-  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3">
-  <script defer src="/sports-fansite/assets/js/app.js?v=2025-08-30-3"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Submit a Listing • Tennessee Gameday Hub</title>
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30-10">
 </head>
 <body>
-<header class="siteHeader">
-  <div class="wrap">
-    <a class="brand" href="/sports-fansite/"><span class="logo">TN</span><span class="brandText">Tennessee</span></a>
-    <nav class="primaryNav">
-      <a href="/sports-fansite/schedule.html">Schedule</a>
-      <a href="/sports-fansite/specials.html">Specials</a>
-      <a href="/sports-fansite/map.html">Map</a>
-      <a href="/sports-fansite/guide.html">Guide</a>
+<header class="site-header">
+  <div class="header-inner">
+    <a class="brand" href="index.html"><span class="badge">TN</span> <span>Tennessee</span></a>
+    <nav class="nav">
+      <a href="schedule.html">Schedule</a>
+      <a href="specials.html">Specials</a>
+      <a href="map.html">Map</a>
+      <a href="guide.html">Guide</a>
     </nav>
-    <div id="countdown" class="countdown">
-      <span class="pill" id="cd-days">00</span><span class="pill" id="cd-hrs">00</span><span class="pill" id="cd-min">00</span><span class="pill" id="cd-sec">00</span>
-    </div>
-    <a class="btnPrimary" href="/sports-fansite/submit.html">Submit</a>
+    <div id="countdown"><span class="pill" id="cd-days">00</span><span class="pill" id="cd-hrs">00</span><span class="pill" id="cd-min">00</span><span class="pill" id="cd-sec">00</span></div>
   </div>
 </header>
 
-<main class="wrapMain pageGrid">
-  <section class="stack">
-    <article class="card">
-      <h2>Submit a listing</h2>
-      <p>Send us a restaurant/bar/shop/event that’s running a gameday special. Describe the offer, date/time, and a link for more info.</p>
-      <p><b>How to submit:</b> email <a href="mailto:vols-fansite@example.com">vols-fansite@example.com</a> or open a GitHub issue with details.</p>
-      <p class="muted">Listings are community-submitted. Call ahead to confirm.</p>
-    </article>
-  </section>
-
-  <aside class="rail">
-    <article class="card">
-      <h2>Quick links</h2>
-      <ul>
-        <li><a href="/sports-fansite/guide.html">Guide</a></li>
-        <li><a href="/sports-fansite/map.html">Map</a></li>
-        <li><a href="/sports-fansite/schedule.html">Schedule</a></li>
-        <li><a href="/sports-fansite/specials.html">Specials</a></li>
-      </ul>
-    </article>
-  </aside>
+<main class="wrap">
+  <article class="card">
+    <div class="head">Submit a listing</div>
+    <div class="body">
+      <p>Send your restaurant/bar/shop/event special, tailgate, or family tip. Include: name, short description, address/link, and the gameday/date it applies to.</p>
+      <p><a class="btn" href="mailto:vols-gameday@example.com?subject=Listing%20submission">Email your listing</a></p>
+      <p class="kicker">Listings are community-submitted. We do light review before posting.</p>
+    </div>
+  </article>
 </main>
 
-<footer class="footer"><div class="inner">Unofficial fan resource.</div></footer>
+<footer class="site-footer"><div class="wrap muted">Unofficial fan resource.</div></footer>
+<script src="assets/js/app.js?v=2025-08-30-10"></script>
 </body>
 </html>
-
